--- a/appWarmaster/src/backend/package.json
+++ b/appWarmaster/src/backend/package.json
@@ -8,18 +8,23 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["torneos", "saga", "warmaster"],
+  "keywords": [
+    "torneos",
+    "saga",
+    "warmaster"
+  ],
   "author": "",
-  "license": "ISC", 
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.2"
   },
-  "devDependencies": { 
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
