cambiado a mysql 8.0 actualizacion arreglados bugs

--- a/appWarmaster/src/backend/.env
+++ b/appWarmaster/src/backend/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=davidroot
-DB_PASSWORD=Latigazos25!
+DB_USER=root
+DB_PASSWORD=Atistioght1!
 DB_NAME=torneos
 JWT_SECRET=¡elPerroYElGatoSonLoMasMejor!
 PORT=5000
