añadimos archivo railway.json

--- a/appWarmaster/src/backend/.env
+++ b/appWarmaster/src/backend/.env
@@ -1,7 +1,15 @@
+#Entorno desarrollo
+NODE_ENV=development
+
+#Base de datos LOCAL
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=Atistioght1!
 DB_NAME=torneos
+
+#JWT secreta
 JWT_SECRET=¡elPerroYElGatoSonLoMasMejor!
+
+#Puerto del servidor
 PORT=5000
