--- a/appWarmaster/src/backend/package.json
+++ b/appWarmaster/src/backend/package.json
@@ -1,11 +1,14 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "API para gestión de torneos SAGA, Warmaster y FOW",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": [
     "torneos",
