--- a/appWarmaster/src/backend/package.json
+++ b/appWarmaster/src/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "API para gestión de torneos SAGA, Warmaster y FOW",
   "main": "server.js",
   "scripts": {
@@ -26,7 +27,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.15.2",
     "node-cron": "^4.2.1",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^7.0.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
